      (patch by Martin Pool)

    * #110853: fix a crash when an __init__ method in a base class has been
      created by assignment rather than direct function definition. (patch by
      Torsten Marek)

    * #110838: fix pylint-gui crash when include-ids is activated (patch by
      Omega Weapon)

    * #110839: bind <F5> to Run button in pylint-gui


2012-10-05  --  0.26.0
    * #106534: add --ignore-imports option to code similarity checking
      and 'symilar' command line tool (patch by Ry4an Brase)

    * #104571: check for anomalous backslash escape, introducing new
      W1401 and W1402 messages (patch by Martin Pool)

    * #100707: check for boolop being used as exception class, introducing
      new W0711 message (patch by Tim Hatch)

    * #4014: improve checking of metaclass methods first args, introducing
      new C0204 message (patch by lothiraldan@gmail.com finalized by sthenault)

    * #4685: check for consistency of a module's __all__ variable,
      introducing new E0603 message

    * #105337: allow custom reporter in output-format (patch by Kevin Jing Qiu)

    * #104420: check for protocol completness and avoid false R0903
      (patch by Peter Hammond)

    * #100654: fix grammatical error for W0332 message (using 'l' as
      long int identifier)

    * #103656: fix W0231 false positive for missing call to object.__init__
      (patch by lothiraldan@gmail.com)

    * #63424: fix similarity report disabling by properly renaming it to RP0801

    * #103949: create a console_scripts entry point to be used by
      easy_install, buildout and pip

    * fix cross-interpreter issue (non compatible access to __builtins__)

    * stop including tests files in distribution, they causes crash when
      installed with python3 (#72022, #82417, #76910)


2012-07-17  --  0.25.2
    * #93591: Correctly emit warnings about clobbered variable names when an
      except handler contains a tuple of names instead of a single name.